crates/rustynes-test-harness/tests/snapshots/external_coverage__fds_Akumajou_Dracula_Japan_Rev_2_Disk_Writer_fds.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=fds/Akumajou Dracula (Japan) (Rev 2) (Disk Writer).fds
rom_sha256=87cb89f18ceb4ce0389d5d6a597c56d46c71d8f6f319bb67a456a5b2b7cfae4a
frames=1141
fb_bytes=245760
cycles=33949890
audio_samples=836508
audio_fnv1a64=0cba85815f6fa6ff
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=1719dca5cef7a325
