crates/rustynes-test-harness/tests/snapshots/external_coverage__fds_Hikari_Shinwa_Palthena_no_Kagami_Japan_Rev_1_fds.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=fds/Hikari Shinwa - Palthena no Kagami (Japan) (Rev 1).fds
rom_sha256=f3e3a7b8e7bd4e9a84d768c6a588d0e66dca71b1d5a4b84360d9b50aea4fc9ff
frames=1141
fb_bytes=245760
cycles=33949868
audio_samples=836507
audio_fnv1a64=cdfe34f2006f9e75
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=cf8764e84395da99
