crates/rustynes-test-harness/tests/snapshots/external_coverage__fds_Zelda_no_Densetsu_The_Hyrule_Fantasy_Japan_v1_0_fds.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=fds/Zelda no Densetsu - The Hyrule Fantasy (Japan) (v1.0).fds
rom_sha256=0bf24b1eed04173a6f4bb3dc6359e67efbc599d16cc1b0a00108dc4a6a19a2b4
frames=1141
fb_bytes=245760
cycles=33949808
audio_samples=836506
audio_fnv1a64=2aefb38af606f409
checkpoint f900 fb_fnv1a64=442bb3f8238eaa6e
checkpoint f1100 fb_fnv1a64=e3ac5636eb096384
