crates/rustynes-test-harness/tests/snapshots/external_coverage__fds_takuikaninja_4023_test_fds.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=fds-takuikaninja/4023-test.fds
rom_sha256=958dfad1656aaf1c3c82b162b68acada253ff59ed01726ff79430222fa49df3c
frames=1141
fb_bytes=245760
cycles=33949781
audio_samples=836505
audio_fnv1a64=f251dbf1e4fe3f89
checkpoint f900 fb_fnv1a64=38d0499ac23d7a9a
checkpoint f1100 fb_fnv1a64=38d0499ac23d7a9a
