crates/rustynes-test-harness/tests/snapshots/external_coverage__fds_takuikaninja_4030d1_addr_fds.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=fds-takuikaninja/4030d1-addr.fds
rom_sha256=ed9f62f8c85c3d94909359a55ff94a53427473378a2eff556f4b465f268fe0c5
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=f251dbf1e4fe3f89
checkpoint f900 fb_fnv1a64=6585cb8e681af725
checkpoint f1100 fb_fnv1a64=6585cb8e681af725
